ProfComp: Finished data protection act

--- a/professionalcomputing.html
+++ b/professionalcomputing.html
@@ -57,7 +57,12 @@ Table of contents
     <li><a href="#intro"> Introduction </a></li>
     <li><a href="#legals"> Legal Perspectives </a><ul>
         <li><a href="#legals1"> Laws </a></li>
-        <li><a href="#legals2"> Computer Misuse Act 1990 </a> </li>
+        <li><a href="#legals2"> Computer Misuse Act (1990) </a> </li>
+    </ul></li>
+    <li><a href="#data"> Data Protection & Freedom of Information </a><ul>
+        <li><a href="#data1"> Data Protection Act (1984) </a></li>
+        <li><a href="#data2"> DPA Principles </a></li>
+        <li><a href="#data3"> Privacy </a></li>
     </ul></li>
 
 </ol>
@@ -95,7 +100,7 @@ Table of contents
 
 <p> What will happen when the UK exits the EU is that the "Great Repeal Act" will happen. Any law that has been forced by the EU will be enacted (practiced) by the British Law, and then those laws will be unwind as per the parliament. In other words, all laws that has been forced by the EU will be converted to the British law, then the law that we don't like can just be unwind. </p>
 
-<h3 id="legals2"> Computer Misuse Act 1990 </h3>
+<h3 id="legals2"> Computer Misuse Act (1990) </h3>
 <p> Three offences: </p>
 <ul>
     <li> Unauthorised access to a computer </li>
@@ -132,10 +137,74 @@ Table of contents
 
 <hr/> <!----------------------------------------------------------------------------------->
 
+<h2 id="data"> Data Protection & Freedom of Information </h2>
+<h3 id="data1"> Data Protection Act (1984) </h3>
+<p> The law in the UK that governs what you are allowed to do with other people's data is the Data Protection Act. It concerns about large amounts of data being collected about people. Data being used for reasons other than why it was collected. </p>
 
 
+<p> The European Council then produced a set of principles for what you can or cannot do with other people's data, which is the UK Data Protection Act (1984) designed to protect individuals against: </p>
+<ul>
+    <li> The use of inaccurate/incomplete personal information </li>
+    <li> The use of information by unauthorised persons </li>
+    <li> The use of information for reasons other than it was collected for </li>
+</ul>
+<p> For example, suppose a chain of newsagents collected data on cigarette purchases and sold it to a health insurance company. It is perfectly reasonable for them to collect data through loyalty cards or the like and you are required to sign the terms and conditions, then they are safe by the Data Protection Act because you have consent with it. But if it was not, then they are in breach of the Data Protection Act. </p>
 
+<p> Some definitions: </p>
+<ul>
+    <li> Data &ndash; Information that is being <em> processed </em> automatically or is collected with the intention or recorded as part of a "relevant filling system". Basically it means that data that is being held in some kind of systematic and searchable way that is relatable back to you as an individual. </li>
+    <li> Processing &ndash; Obtaining, recording, or holding data or carrying out any operation on it. Basically anything you can do with data. </li>
+    <li> Data Controller &ndash; The person who controls why and how data is processed. </li>
+    <li> Data Processors &ndash; The person who processes the data on behalf of the controller. </li>
+    <li> Personal Data &ndash; Data which relates to a living person who can be identified using this data. </li>
+    <li> Sensitive Data &ndash; Personal data relating to racial, ethnic, religious, political, sexual, etc. aspects of a person. </li>
+</ul>
+<p> These are pieces of information that people may not want to be publicly available and one should not simply collect data for purposes other than it was collected for. </p>
 
+<h3 id="data2"> DPA Principles </h3>
+<h4> First Principle </h4>
+<p> Personal Data wil be processed fairly and lawfully unless there are some conditions. These conditions are that one has given consent, or that there is a legal obligation to collect it like tax returns. There is also the possibility of giving <em> Explicit </em> consent. Giving explicit consent requires one to be active like signing a form or some other contracts. The key here is that there must be consent or legal obligation to collect data. </p>
+
+<h4> Second Principle </h4>
+<p></p> Personal data shall be obtained only for one or more specified and lawful purposes, and shall be further processed in any manner incompatible with that purposes. This should be all written in the terms and conditions. Data can't be collected "just in case it's useful".
+
+<h4> Third Principle </h4>
+<p> Data collected should be adequate, relevant, and not excessive in relation to the purpose for which is collected. </p>
+
+<h4> Fourth Principle </h4>
+<p> Personal data should be accurate and where necessary kept up to date. </p>
+
+<h4> Fifth Principle </h4>
+<p> Personal data processed for any purpose should not be kept longer than it is necessary for that purpose. The length of time the data is kept may vary, but have to be reasonable. Procedures for data deletion must be rigorous and specified (including deletion of backed up data). </p>
+
+<h4> Sixth Principle </h4>
+<p> Personal data should be processed in accordance with the rights of the data subjects under this act. Basically means that if you have data you have to obey all these principles. </p>
+<ul>
+    <li> DPA (1984) <ul>
+        <li> Subjects have a right to know whether an organisational data held relating to them, the right to see the data, and the right to have the data corrected or erased if inaccurate. </li>
+    </ul></li>
+    <li> DPA (1998), you get more things. <ul>
+        <li> A description of data being held. </li>
+        <li> An explanation of the purpose for this it is being held. </li>
+        <li> A description to whom the data can be disclosed. </li>
+        <li> An intelligible (readable and understandable) statement of the specific data about them. </li>
+        <li> A description of the source of the data. </li>
+        <li> If the data is used to automatically make a decision (such as being rejected when saking for a loan), the subject has the right to ask for the decision to be non-automatically and the logic behind the automatic decision. </li>
+        <li> Prevent the processing of data likely to cause damage or distress or for direct marketing. </li>
+        <li> To be awarded compensation in the case of damage. </li>
+    </ul></li>
+</ul>
+
+<h4> Seventh Principle </h4>
+<p> Appropriate technical and organisational measures shall be taken against unauthorised or unlawful processing of personal data and against accidental loss or destruction, or damage to personal data. In other words, keeping the data secure is a legal requirement</p>
+
+<h4> Eighth Principle </h4>
+<p> Personal data shall not be transferred to a country or territory outside the European Economic Area unless that country ensures an adequate level or protection for he rights and freedoms of data subjects in the relation of processing of data. Specifically allows companies to transfer data over national boundaries. </p>
+
+<p> The DFA is not a key to get any data mentioning you, it is just for you to collect information <strong>about</strong> you. </p>
+
+<h3 id="data3"> Privacy </h3>
+<p> There is about one CCTV camera for every 14 people in the UK. Almost everything you do gives away an information about you, especially when connected to the internet. Location services in your mobiles give people information about where you are, bluetooth gives others information about your phone, etc. </p>
 
 <!-- Utils -->
 <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
