finished section 2 and added section 3 of pro comp

--- a/professionalcomputing.html
+++ b/professionalcomputing.html
@@ -63,8 +63,15 @@ Table of contents
         <li><a href="#data1"> Data Protection Act (1984) </a></li>
         <li><a href="#data2"> DPA Principles </a></li>
         <li><a href="#data3"> Privacy </a></li>
+        <li><a href="#data4"> RIPA (2000) </a></li>
     </ul></li>
-
+    <li><a href="#contracts"> Contracts & Liabilities </a><ul>
+        <li><a href="#contracts1"> Contracts </a></li>
+        <li><a href="#contracts2"> Payment </a></li>
+        <li><a href="#contracts3"> Obligations on Client </a></li>
+        <li><a href="#contracts4"> Consultancy </a></li>
+        <li><a href="#contracts5"> Liability </a></li>
+    </ul></li>
 </ol>
 <hr/> <!----------------------------------------------------------------------------------->
 
@@ -205,6 +212,243 @@ Table of contents
 
 <h3 id="data3"> Privacy </h3>
 <p> There is about one CCTV camera for every 14 people in the UK. Almost everything you do gives away an information about you, especially when connected to the internet. Location services in your mobiles give people information about where you are, bluetooth gives others information about your phone, etc. </p>
+
+<hr/> <!----------------------------------------------------------------------------------->
+
+<h3 id="data4"> Regulation of Investigatory Powers (2000) </h3>
+<p>Framework for lawful interception of computer, telephone and postal messages</p>
+<p>ISPs (and most employers) can monitor communications without consent provided it's to:</p>
+<ul>
+    <li>Establish facts</li>
+    <li>Ensure company regulations are being complied with</li>
+    <li>Ascertain standards which ought to be achieved</li>
+    <li>Prevent crime</li>
+    <li>Investigate unauthorised use of telecommunications systems</li>
+    <li>Ensure effective operation of system (e.g detecting Ddos attacks)</li>
+    <li>Find out whether a communication is business or personal</li>
+    <li>Monitor but not record calls to confidential counselling helplines run free of charge by the business</li>
+</ul>
+<p>But such organisations are required to make reasonable efforts to inform users that such interception might take place<br /><br />Interception Warrants</p>
+<ul>
+    <li>RIPA allows government agencies the right to ask for interception warrants to monitor communications to/from specific persons or organisations</li>
+    <li>Police, Inland Revenue etc</li>
+</ul>
+<h4>Freedom of Information</h4><ul>
+    <li>Act to provide clear rights of access of information held by bodies in the public sector - with certain conditions &amp; exemptions</li>
+    <li>Where information is exempted from disclosure there is a duty on public body to disclose where, in the public body&rsquo;s view, the public interest in disclosure outweighs the public interest in maintaining the exemption.</li>
+    <li>Monitored by the Information Commissioner and &ldquo;Information Tribunal&rdquo; with wide powers to enforce the act</li>
+    <li>A&nbsp;duty for all public bodies to adapt a scheme of publication of information which must be approved by the IC.</li>
+</ul>
+<p>Some of the issues with Freedom of Information are:</p>
+<ul>
+    <li>Potential conflicts between FOI requests and DPA in cases where there is personal data</li>
+    <li>Usually FOI requests must be answered within a month of receipt - sometimes impossible or inaccessible (CCTV footage)</li>
+</ul>
+<p>Each Act has been written with good intentions - however we still need to be careful about the actual application of such acts</p>
+
+<hr/> <!----------------------------------------------------------------------------------->
+
+<h2 id="contracts"> Contracts and Liabilities </h2>
+<h3 id="contracts1"> Contracts </h3>
+<p>Contract Law is old English law in England and Wales</p>
+<p>All parties intend to make a contract</p>
+<p>All parties must be competent to make a contract</p>
+<p>There must be a "consideration" - (both parties must receive and provide something)<br /><br /></p>
+<p>No requirement of a lawyer, writing or witnesses (though these make it easier to enforce.<br />&nbsp;</p>
+<p>Minor additions for new technology but fine for most things &hellip; except software<br /><br /></p>
+<p>Contracts protect both parties</p>
+<ul>
+    <li>Fixed Price Contracts</li>
+    <li>Time and Materials</li>
+    <li>Consultancy and Contract Hire<br /><br /></li>
+</ul>
+<p><strong>Fixed Price Contract</strong>:</p>
+<ul>
+    <li>Typically tailor made, bespoke systems</li>
+    <li>A short agreement - (who the parties are &amp; what's been said before is not part of the contract)</li>
+    <li>Standard Terms &amp; Conditions - how the supplier normally does business</li>
+    <li>A set schedule/Annexes:
+        <ul>
+            <li>Particular requirements of the contract</li>
+            <li>What is supplied</li>
+            <li>Deadlines</li>
+            <li>What payments are to be made etc<br /><br /></li>
+        </ul>
+    </li>
+</ul>
+<p><strong>What is to be produced?</strong></p>
+<p>Contract must define the "product"</p>
+<p>Standard T&amp;Cs refer to an Annex which in turn refers to a Requirements Specification<br /><br /></p>
+<p>A good Requirements Specification is difficult to achieve as the client&rsquo;s needs evolve and technologies change.</p>
+<p>The contract must address how such changes are accommodated</p>
+<p><strong>What is to be delivered?</strong></p>
+<p>It is rarely just handing over code<br /><br /></p>
+<p>Contract needs to specify exactly what is delivered:</p>
+<ul>
+    <li>Source Code</li>
+    <li>Command Files for building executables</li>
+    <li>Documentation</li>
+    <li>Reference/Training/Operation Manuals</li>
+    <li>Training</li>
+    <li>Test Data &amp; results<br /><br /></li>
+</ul>
+<p>Ownership - who owns the IPR for the software</p>
+<p>Confidentiality - should be specified for both parties</p>
+<h3 id="contracts2"> Payment </h3>
+<p>Payment shall be due within 30 days of&nbsp;the date of&nbsp;issue of&nbsp;an invoice.&nbsp;If&nbsp;payment is delayed by more than&nbsp;30 days, the Company&nbsp;will have&nbsp;the right to terminate the contract or apply a surcharge at&nbsp;an interest rate&nbsp;2%&nbsp;above the bank base lending&nbsp;rate.<br /><br /></p>
+<p>It&nbsp;is unlikely&nbsp;such&nbsp;a clause&nbsp;will ever be used.<br />&nbsp;</p>
+<p>Payment is more likely to be staggered</p>
+<ul>
+    <li>Initial&nbsp;payment&nbsp;of 15% on&nbsp;signing</li>
+    <li>Stage payments during&nbsp;project (say at 65% completion)</li>
+    <li>25% at acceptance&nbsp;of software</li>
+    <li>Final&nbsp;10% at end&nbsp;of contract<br /><br /></li>
+</ul>
+<p>Such&nbsp;staggered payments protect the supplier</p>
+<ul>
+    <li>Client may go out of&nbsp;business</li>
+    <li>Cash&nbsp;flow&nbsp;for supplier<br /><br /></li>
+</ul>
+<p>How&nbsp;to stagger:</p>
+<ul>
+    <li>By calendar&nbsp;month&nbsp;&ndash;&nbsp;benefits&nbsp;the supplier</li>
+    <li>By project&nbsp;completion&nbsp;&ndash;&nbsp;benefits client<br /><br /></li>
+</ul>
+<p><strong>Penalty Clauses</strong></p>
+<p>Payment clauses protect the supplier but the client may also add them</p>
+<p>Software is often delayed but such penalties are limited</p>
+<p>Suppliers are often very reluctant to accept penalty clauses</p>
+<p>If the software is really late and penalty is high then the suppliers has no incentive to complete the work</p>
+<h3 id="contracts3"> Obligations on client </h3>
+<p>Contract needs to specify client obligations; hence it must provide:</p>
+<ul>
+    <li>Documentation</li>
+    <li>Access to appropriate staff</li>
+    <li>Machine facilities for testing</li>
+    <li>Accommodation</li>
+</ul>
+<p>Most suppliers will have their own standards of testing &amp; quality assurance but large clients will prefer to use their own. All of this needs to be specified in the contract</p>
+<p><strong>Acceptance</strong></p>
+<ul>
+    <li>Client must provide a fixed set of acceptance tests</li>
+    <li>Tasks, expected results, accuracy figures etc</li>
+    <li>Successful demonstration of system will constitute acceptance</li>
+</ul>
+<p><strong>Warranty</strong></p>
+<ul>
+    <li>Standard is 90 day warranty</li>
+    <li>Any identified errors fixed free of charge</li>
+    <li>Beyond this is subject to negotiation</li>
+</ul>
+<p><strong>Indemnity</strong></p>
+<ul>
+    <li>Risk of supplier infringing intellectual property rights of third party</li>
+    <li>Usual for contract to indemnify client &amp; supplier so each other is not liable for any infringement by the other due to own fault</li>
+</ul>
+<p><strong>Termination</strong></p>
+<p>It's not uncommon for projects to be cancelled as:</p>
+<ul>
+    <li>Client may go bust</li>
+    <li>Or may merge with a larger company</li>
+    <li>Technology becomes obsolete</li>
+</ul>
+<p>Contract needs to detail what payments to supplier for unfinished project &amp; what intellectual property rights exist</p>
+<p><strong>Arbitration</strong></p>
+<ul>
+    <li>So far contracts are complex</li>
+    <li>Litigation is very expensive (and often not worth it)</li>
+    <li>Contract may specify that in the case of a dispute the opinion of an independent arbitrator will decide</li>
+    <li>Avoids legal costs</li>
+    <li>BCS maintains a list of qualified IT arbitrators</li>
+</ul>
+<p><strong>Time &amp; Materials (also called "Cost plus" Contracts)</strong></p>
+<p>Supplier agrees to develop software</p>
+<ul>
+    <li>Payment based on costs incurred plus daily rate</li>
+    <li>Acceptance tests, payments etc - are far less complex</li>
+</ul>
+<p>Usually cheaper than fixed price contracts</p>
+<p>Sometimes project is unclear - a fixed price is impossible</p>
+<p>Currently there's a shift from T&amp;M to Fixed Price contracts in IT (especially in public spending)</p>
+<p><strong>Contract Hire</strong></p>
+<p>Fixed Price contracts are complex</p>
+<p>Contract Hire offers a far simpler alternative</p>
+<ul>
+    <li>Supplier provides services of staff for a fixed period with agreed hourly/daily rates</li>
+    <li>Client takes responsibility for managing staff</li>
+    <li>Termination by either side can be done at a short notice</li>
+</ul>
+<h3 id="contracts4"> Consultancy </h3>
+<p><strong>Consultancy</strong> - expert analysis of a key part of business</p>
+<ul>
+    <li>Usually produces a report rather than a product</li>
+    <li>Consultancy is usually done at a fixed price</li>
+    <li>Small amounts of cash involved</li>
+    <li>Harder for a report to fail an acceptance test</li>
+    <li>Reputation of consultant usually is enough</li>
+</ul>
+<p><strong>Issues with Consultancy:</strong></p>
+<ul>
+    <li>Confidentiality</li>
+</ul>
+<ul>
+    <ul>
+        <li>There need to be safe guards to ensure consultant doesn't profit against the client following project</li>
+    </ul>
+</ul>
+<ul>
+    <li>Terms of reference</li>
+</ul>
+<ul>
+    <ul>
+        <li>What is the consultancy meant to be looking at?</li>
+        <li>Often the issue isn't what was originally agreed</li>
+        <li>This is a major source of disagreements</li>
+    </ul>
+</ul>
+<ul>
+    <li>Who controls the final version?</li>
+</ul>
+<ul>
+    <ul>
+        <li>Usually client approves a draft version of the document</li>
+        <li>Client may require amendments</li>
+        <li>This might damage the consultant&rsquo;s reputation</li>
+    </ul>
+</ul>
+<ul>
+    <li>Liability</li>
+</ul>
+<ul>
+    <ul>
+        <li>Few consultants wish to be liable for their expert advice</li>
+        <li>Most clients disagree - and need to verify the consultant really is an expert</li>
+    </ul>
+</ul>
+<h3 id="contracts5"> Liability </h3>
+<p>Most suppliers&nbsp;are very&nbsp;reluctant to agree&nbsp;to any&nbsp;liability for defective&nbsp;software&nbsp;or hardware</p>
+<p>Standard&nbsp;Terms &amp; Conditions&nbsp;will usually&nbsp;limit liability&nbsp;to project&nbsp;cost or even&nbsp;a&nbsp;fraction of&nbsp;this</p>
+<p>The Law disagrees:</p>
+<ul>
+    <li>Unfair Contract Act (1977)</li>
+    <li>Impossible&nbsp;to limit liability&nbsp;in the result of a death&nbsp;or personal injury</li>
+</ul>
+<p><strong>Consumer Protection</strong></p>
+<p>If the client is a "consumer" then:</p>
+<ul>
+    <li>Client is a private person</li>
+    <li>Supplier is acting as a business</li>
+    <li>Goods are of a type usual for private use</li>
+</ul>
+<p>Sale of Goods Act (1979) - Goods must be fit for purpose</p>
+<p>Otherwise, Supply of Goods and Services (1982) - Goods are produced with "reasonable" care</p>
+<p>It's unclear whether software counts as "goods"</p>
+<ul>
+    <li>Shrink wrapped, licenced software probably is</li>
+    <li>Bespoke systems are probably not</li>
+</ul>
+
+<hr/> <!----------------------------------------------------------------------------------->
 
 <!-- Utils -->
 <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
