Added contents and introduction for Computational Vision

--- a/vision.html
+++ b/vision.html
@@ -52,6 +52,93 @@
 <hr/>
     <h1> LI Computational Vision </h1>
 <hr/>
+Table of contents
+<ol>
+    <li><a href="#intro"> Introduction </a></li>
+    <li><a href="#human"> Human Vision </a></li>
+    <li><a href="#edge"> Edge Detection </a></li>
+    <li><a href="#noise"> Noise Filtering </a></li>
+    <li><a href="#colour"> Colour </a></li>
+    <li><a href="#adv"> Advanced Edge Detection </a></li>
+    <li><a href="#hough"> Hough Transform </a></li>
+    <li><a href="#sift"> SIFT - Scale Invariant Feature Transform </a></li>
+    <li><a href="#face"> Face Recognition </a></li>
+    <li><a href="#motion"> Motion </a></li>
+    <li><a href="#roc"> ROC Analysis </a></li>
+    <li><a href="#object"> Object Recognition </a></li>
+    <li><a href="#model"> Model Based Object Recognition </a></li>
+</ol>
+<hr/>
+
+<h2 id="intro"> 1 - Introduction </h2>
+<p> What is Computational Vision? Vision is the process of discovering from images what is present in the world,
+    and where it is.</p>
+<p align="center"> <mark><strong> The acquisition of knowledge <br></strong></mark>
+    <span style="color:#FF0000"> about </span><mark><strong><br> objects and events in the environment
+        <br></strong></mark><span style="color:#FF0000"> through </span><mark><strong><br> information processing
+        <br></strong></mark><span style="color:#FF0000"> of </span><mark><strong><br>
+        light emitted or reflected from objects </strong></mark></p>
+<p>To make computers 'see'</p>
+<p>"Automatic inference" of "properties" of "the world" from "images"</p>
+<ul>
+    <li>Automatic inference
+        <ul>
+            <li>Inference without (or minimal) human intervention</li>
+        </ul></li>
+    <li>The world
+        <ul>
+            <li>The real unconstrained 3D physical world</li>
+            <li>Constrained/Engineered environments</li>
+        </ul></li>
+    <li>Image
+        <ul>
+            <li>2D projection of the electromagnetic signal provided by the world</li>
+        </ul></li>
+    <li>Properties
+        <ul>
+            <li>Geometric: shape, size, location, distance</li>
+            <li>Material : color, texture, reflectivity, transparency</li>
+            <li>Temporal: direction of motion (in 3D), speed, events</li>
+            <li>Illumination: light source specification, light source color</li>
+            <li>Symbolic: objects  class, object s ID</li>
+        </ul></li>
+</ul>
+<hr/>
+
+<h2 id="human"> 2 - Human Vision </h2>
+<hr/>
+
+<h2 id="edge"> 3 - Edge Detection </h2>
+<hr/>
+
+<h2 id="noise"> 4 - Noise Filtering </h2>
+<hr/>
+
+<h2 id="colour"> 5 - Colour </h2>
+<hr/>
+
+<h2 id="adv"> 6 - Advanced Edge Detection </h2>
+<hr/>
+
+<h2 id="hough"> 7 - Hough Transform </h2>
+<hr/>
+
+<h2 id="sift"> 8 - SIFT - Scale Invariant Feature Transform </h2>
+<hr/>
+
+<h2 id="face"> 9 - Face Recognition </h2>
+<hr/>
+
+<h2 id="motion"> 10 - Motion </h2>
+<hr/>
+
+<h2 id="roc"> 11 - ROC Analysis </h2>
+<hr/>
+
+<h2 id="object"> 12 - Object Recognition </h2>
+<hr/>
+
+<h2 id="model"> 13 - Model Based Object Recognition </h2>
 
     <!-- Utils -->
     <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
