Added a progress page. KEEP UPDATING THIS whenever you finish a section.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 </head>
 <body>
     <h1> Exam Notes May/June 2017 </h1>
+    <a href="progress.html"> Progress</a>
     <table>
         <caption> Exam Schedule </caption>
         <tr style="font-weight: bold;">
