--- a/vision.html
+++ b/vision.html
@@ -81,20 +81,20 @@ Table of contents
 <p>To make computers 'see'</p>
 <p>"Automatic inference" of "properties" of "the world" from "images"</p>
 <ul>
-    <li>Automatic inference
+    <li><strong>Automatic inference</strong>
         <ul>
             <li>Inference without (or minimal) human intervention</li>
         </ul></li>
-    <li>The world
+    <li><strong>The world</strong>
         <ul>
             <li>The real unconstrained 3D physical world</li>
             <li>Constrained/Engineered environments</li>
         </ul></li>
-    <li>Image
+    <li><strong>Image</strong>
         <ul>
             <li>2D projection of the electromagnetic signal provided by the world</li>
         </ul></li>
-    <li>Properties
+    <li><strong>Properties</strong>
         <ul>
             <li>Geometric: shape, size, location, distance</li>
             <li>Material : color, texture, reflectivity, transparency</li>
