Index: Updated progress and added models topiclist. We can finish this!

--- a/progress.html
+++ b/progress.html
@@ -52,25 +52,26 @@
 <h2> Progress </h2>
 <!-- Change value and max after finishing the table of contents for each module -->
 Software Engineering <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+<progress value="3" max="18"></progress> 3/18<br><br>
 
 Computational Vision <br>
 <progress value="1" max="13"></progress> 1/13<br><br>
 
-Models of Computation <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+Models of Computation (<a href="#" onclick="document.getElementById('modelstopics').style.display =''">Topic list</a>) <br>
+<progress value="7" max="31"></progress> 7/31<br><br>
+<div> <img id="modelstopics" style="display: none;" src="images/models/topiclist.JPG"/> </div>
 
 Introductory Databases <br>
 <progress value="0" max="100"></progress> 0/100<br><br>
 
 Professional Computing <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+<progress value="40" max="100"></progress> 40/100<br><br>
 
 Computer Systems and Architecture <br>
 <progress value="0" max="100"></progress> 0/100<br><br>
 
 C/C++ <br>
-<progress value="0" max="100"></progress> 0/100<br><br>
+<progress value="15" max="100"></progress> 15/100<br><br>
 
 Graphics <br>
 <progress value="0" max="100"></progress> 0/100<br><br>
