--- a/databases.html
+++ b/databases.html
@@ -5,7 +5,7 @@
     <title> Introductory Databases </title>
     <style type="text/css">
         body {
-            background-color: #ffffcc;
+            background-color: #f5faff;
             font-family: "Georgia", serif;
         }
 
@@ -40,7 +40,7 @@
             color: white;
             cursor: pointer;
             padding: 15px;
-            border-radius:10px;
+            border-radius: 10px;
         }
 
         #homeBtn:hover {
@@ -49,30 +49,45 @@
     </style>
 </head>
 <body>
-<hr/>
-    <h1> LI Introductory Databases </h1>
-<hr/>
+<hr/> <!------------------------------------------------------------------------------->
+<h1> LI Introductory Databases </h1>
+<hr/> <!------------------------------------------------------------------------------->
+Table of Contents
+<ol>
+    <li><a href="#database"> Database </a></li>
 
-    <!-- Utils -->
-    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
+</ol>
+<hr/> <!------------------------------------------------------------------------------->
+<h2 id="database"> Database </h2>
+<p> <strong> Database </strong> is a structured set of data held in a computer, especially one that is accessible in various ways. </p>
+<p> Database management system (DBMS) is a core data base, which is a representation of data that can be used for retrieval and maintenance. </p>
+<p> There are many database models, but <strong> relational databases </strong> are the pre-eminent choice for general purpose of database systems. </p>
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("topBtn").style.display = "block";
-            } else {
-                document.getElementById("topBtn").style.display = "none";
-            }
+
+
+
+<!-- Utils -->
+<button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("topBtn").style.display = "block";
+        } else {
+            document.getElementById("topBtn").style.display = "none";
         }
+    }
 
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home </button>
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+<button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home</button>
 </body>
 </html>
