--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <td align="center"> - </td>
             <td align="center"> - </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
         </tr>
         <tr> <!-- Computational Vision -->
             <td> Thursday </td>
@@ -78,7 +78,7 @@
             <td align="center"> 5 </td>
             <td align="center"> - </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
         <tr> <!-- Models of Computation -->
             <td> Friday </td>
@@ -90,7 +90,7 @@
             <td align="center"> 21 </td>
             <td align="center"> 84 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
         </tr>
         <tr> <!-- Introductory Databases -->
             <td> Thursday </td>
@@ -102,7 +102,7 @@
             <td align="center"> 90 </td>
             <td align="center"> 156 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
         <tr> <!-- Professional Computing -->
             <td> Friday </td>
@@ -114,7 +114,7 @@
             <td align="center"> 21 </td>
             <td align="center"> 87 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
         </tr>
         <tr> <!-- Computer Systems and Architecture -->
             <td> Monday </td>
@@ -126,7 +126,7 @@
             <td align="center"> 216 </td>
             <td align="center"> 279 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
         <tr> <!-- C/C++ -->
             <td> Thursday </td>
@@ -138,7 +138,7 @@
             <td align="center"> 10 </td>
             <td align="center"> 22 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
         </tr>
         <tr> <!-- Graphics -->
             <td> Tuesday </td>
@@ -150,7 +150,7 @@
             <td align="center"> 11 </td>
             <td align="center"> 32 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
         <tr> <!-- Maths -->
             <td> Wednesday </td>
@@ -162,7 +162,7 @@
             <td align="center"> 92 </td>
             <td align="center"> 152 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
         </tr>
         <tr> <!-- Intro to Computer Security -->
             <td> Friday </td>
@@ -174,7 +174,7 @@
             <td align="center"> 114 </td>
             <td align="center"> 168 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
         </tr>
 		<tr> <!-- Natural Language Processing -->
             <td> Wednesday </td>
@@ -186,7 +186,7 @@
             <td align="center"> - </td>
             <td align="center"> 41 </td>
             <td align="center"> 1:30hrs </td>
-            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
+            <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
         </tr>
     </table>
 
