Vision: fixed typos #issue5

--- a/vision.html
+++ b/vision.html
@@ -100,7 +100,7 @@ Table of contents
             <li>Material : color, texture, reflectivity, transparency</li>
             <li>Temporal: direction of motion (in 3D), speed, events</li>
             <li>Illumination: light source specification, light source color</li>
-            <li>Symbolic: objects  class, object s ID</li>
+            <li>Symbolic: objects' class, object's ID</li>
         </ul></li>
 </ul>
 <hr/>
@@ -148,7 +148,7 @@ at the interface, so to make the waves match up, the light has to change <strong
     <li>But if it is 1m away the lens must change shape to produce a sharp image <em><sup>1</sup>&frasl;<sub>f</sub>
         = <sup>1</sup>&frasl;<sub>1</sub> + <sup>1</sup>&frasl;<sub>0.02</sub> = 51 dioptres</em></li>
 </ul>
-<p> The reina contains two types of photoreceptors that respond to light</p>
+<p> The retina contains two types of photoreceptors that respond to light</p>
 <ul>
     <li>Rods<ul>
         <li>&approx;120million</li>
