added intellectual property

--- a/professionalcomputing.html
+++ b/professionalcomputing.html
@@ -72,6 +72,14 @@ Table of contents
         <li><a href="#contracts4"> Consultancy </a></li>
         <li><a href="#contracts5"> Liability </a></li>
     </ul></li>
+	    <li><a href="#property"> Intellectual Property </a><ul>
+        <li><a href="#property1"> Copyright </a></li>
+        <li><a href="#property2"> Infringement </a></li>
+        <li><a href="#property3"> Patents </a></li>
+        <li><a href="#property4"> Software Patents </a></li>
+        <li><a href="#property5"> Confidential Information </a></li>
+		<li><a href="#property6"> Trademarks & Passing Off </a></li>
+    </ul></li>
 </ol>
 <hr/> <!----------------------------------------------------------------------------------->
 
@@ -196,7 +204,7 @@ Table of contents
         <li> A description to whom the data can be disclosed. </li>
         <li> An intelligible (readable and understandable) statement of the specific data about them. </li>
         <li> A description of the source of the data. </li>
-        <li> If the data is used to automatically make a decision (such as being rejected when saking for a loan), the subject has the right to ask for the decision to be non-automatically and the logic behind the automatic decision. </li>
+        <li> If the data is used to automatically make a decision (such as being rejected when asking for a loan), the subject has the right to ask for the decision to be non-automatically and the logic behind the automatic decision. </li>
         <li> Prevent the processing of data likely to cause damage or distress or for direct marketing. </li>
         <li> To be awarded compensation in the case of damage. </li>
     </ul></li>
@@ -446,6 +454,232 @@ Table of contents
 <ul>
     <li>Shrink wrapped, licenced software probably is</li>
     <li>Bespoke systems are probably not</li>
+</ul>
+
+<hr/> <!----------------------------------------------------------------------------------->
+<h2 id="property"> Intellectual Property </h2>
+<p><strong>Theft</strong>: the "intentional taking of somebody else's property with the intention of permanently depriving them of it"</p>
+<p>Different types of Intellectual Property rights:</p>
+<ul>
+<li>Copyright</li>
+<li>Patents</li>
+<li>Confidential Information</li>
+<li>Trademarks<br /><br /></li>
+</ul>
+<h3 id="property1"> Copyright </h3>
+<p>Copyright, Design and Patents Act 1988</p>
+<p>Copyright (computer programs) Regulations 1992<br /><br /></p>
+<p>The owner of any intellectual property work has certain exclusive rights:</p>
+<ul>
+<li>The right to make copies of the work</li>
+<li>The right to issue copies of the work to the public (either paid or for free)</li>
+<li>The right to adapt the work e.g translating form English to Japanese (or Java to C)</li>
+<li>These rights are automatic</li>
+</ul>
+<p>Anybody must request permission (but often permission is implicit e.g webpages)</p>
+<p>Copyright does not stop anybody publishing identical work (so long as they came up with the idea independently) &ndash; only copied work</p>
+<p>Copyright lasts 70 years after the death of the author.<br /><br /></p>
+<p>What can you do without permission?</p>
+<p>It's not an infringement to:</p>
+<ul>
+<li>Make a backup of a program you are authorized to use (only 1 copy)</li>
+<li>You can decompile code to correct any errors (also if you need to write new code to interoperate with it)</li>
+<li>You can sell your right to use a program (but you can't keep a copy)<br /><br /></li>
+</ul>
+<p><strong>Databases</strong></p>
+<p>Copyright obviously applies to databases where "content is of the authors own creation"</p>
+<p>Database Copyright:</p>
+<ul>
+<li>If there is "substantial investment in obtaining, verifying or presenting the contents of the database"</li>
+<li>Lasts for 15 years from creation (but renews if database is modified)<br /><br /></li>
+</ul>
+<h3 id="property2"> Infringement </h3>
+<ul>
+<li>Primary Infringement
+<ul>
+<li>Exclusive rights of copyright holder are infringed</li>
+<li>Civil issue - damages, injunctions</li>
+</ul>
+</li>
+<li>Secondary Infringement
+<ul>
+<li>Primary infringement in a business context
+<ul>
+<li>Selling copies</li>
+<li>Using pirated software in a business</li>
+</ul>
+</li>
+<li>Criminal Issue - substantial fines, imprisonment etc<br /><br /></li>
+</ul>
+</li>
+</ul>
+<p>A lot of software uses DRM</p>
+<p>Providing information about how to avoid DRM is the same as actual copyright infringement<br /><br /></p>
+<h3 id="property3"> Patents </h3>
+<p>Patents Act 1977</p>
+<p>A patent is a temporary right granted by the state enabling the inventor to prevent other people from copying his work without permission<br />&nbsp;</p>
+<p>Patents must be applied for but are far stronger than copyright - prevents other from coming up with the same solution</p>
+<p>Patents were meant to encourage innovation - they reword the inventor a grace period to recoup development costs (or more realistically licence the patent to entrepreneurs)<br /><br /></p>
+<p>For a product to be patents it must be:</p>
+<ul>
+<li>New - applies to the inventor as much as anybody</li>
+<li>Involves an inventive step - Isn't an obvious solution anybody well qualified might do</li>
+<li>Is capable of industrial application - is practical</li>
+<li>Is not in an area specifically excluded &ndash; no scientific theories, mathematical methods etc<br /><br /></li>
+</ul>
+<p>Obtaining &amp; Enforcing</p>
+<p>Patents are granted nationally. Technically you need to apply in each country but there are trade schemes such as WIPO, European PO etc.</p>
+<p>Timing is crucial:</p>
+<ul>
+<li>Date of initial application determines what is &ldquo;new&rdquo;</li>
+<li>Full patent specification requires specialist work</li>
+<li>Often takes four years to complete.</li>
+</ul>
+<p>Computing being a global business requires the patent to be taken out in enough countries to ensure it is challengeable.</p>
+<p>Enforcing a patent is difficult, many patents are contested.</p>
+<p>Patent enforcement costs time and money so many small companies often cannot contest patents.</p>
+<p>&nbsp;</p>
+<h3 id="property4"> Software Patents </h3>
+<p>USA</p>
+<ul>
+<li>US Patent and Trademark Office has always refused to patent software</li>
+<li>Changed in 1981 &ndash; patent for curing rubber (using software to determine required heat)</li>
+</ul>
+<p>Currently &ndash; software can be patented if:</p>
+<ol>
+<li>It is part of a product that can be patented</li>
+<li>controls some process with a physical effect (or)</li>
+<li>Processes data that arises from the natural world</li>
+</ol>
+<p>UK &amp; Europe</p>
+<p>European Patent Convention &amp; Copyright, Design and Patents Act 1988</p>
+<ul>
+<li>Technically software cannot be patented</li>
+<li>But several countries do in fact patent software<br /><br /></li>
+</ul>
+<p>Eu Commission produced a draft directive (2002)</p>
+<ul>
+<li>Since then heavily modified</li>
+<li>Unlikely to be accepted by anybody</li>
+</ul>
+<p>Software Patents are a&nbsp;mess.</p>
+<p>Patents are designed to reward innovation</p>
+<p>&nbsp;</p>
+<table>
+<tbody>
+<tr>
+<td width="168">
+<p>Pros</p>
+</td>
+<td width="222">
+<p>Cons</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>Patents allow for financial rewards for innovators and creators</p>
+</td>
+<td width="229">
+<p>The software industry has been very successful without patents</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>Fund future research</p>
+</td>
+<td width="225">
+<p>Most original development is done by small companies</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>Fund computer scientists!</p>
+</td>
+<td width="229">
+<p>This is then licenced to/exploited by big companies</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>&nbsp;</p>
+</td>
+<td width="228">
+<p>Patents allow big companies (with big R&amp;D depts) to claim basic computer</p>
+<p>functionality as their exclusive right</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>&nbsp;</p>
+</td>
+<td width="229">
+<p>A great deal of software has already been written without patents</p>
+</td>
+</tr>
+<tr>
+<td width="168">
+<p>&nbsp;</p>
+</td>
+<td width="222">
+<p>Now we see retrospective patents being granted &hellip;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><strong><br />Copyleft</strong></p>
+<ul>
+<li>Political/Software Philosophy</li>
+<li>Software is released as "free"</li>
+<li>No restrictions on re-use/modification/copying</li>
+<li>EXCEPT any resulting code must also be free</li>
+<li>ie You can do anything with this code except change the licence to "not free"</li>
+<li>Example: GNU General Public Licence for Software v3.0<br /><br /></li>
+</ul>
+<h3 id="property5"> Confidential Information </h3>
+<p>Often work involves an obligation of confidence</p>
+<ul>
+<li>g. software development for a company might reveal commercially sensitive information</li>
+<li>Conditions of employment for employees</li>
+<li>Long periods of notice for employees with sensitive knowledge</li>
+<li>Clauses in consultancy agreements for consultants<br /><br /></li>
+</ul>
+<p>Even without such conditions, obligations might occur under Equity. <br /> Obligation occurs if a reasonable person in such a position would reasonably understand that information was given in confidence.<br /><br /></p>
+<p>Public Interest Disclosure Act (1998)</p>
+<p>Information can be disclosed if the employee believes any of the following might occur:</p>
+<ul>
+<li>A criminal offence</li>
+<li>Failure to comply with a legal obligation</li>
+<li>A miscarriage of justice</li>
+<li>Danger to health and safety</li>
+<li>Environmental damage</li>
+<li>Information that of these have been concealed</li>
+</ul>
+<p>&nbsp;</p>
+<h3 id="property6"> Trademarks &amp; Passing Off </h3>
+<p>Any sign capable of being represented graphically which is capable of distinguishing goods and services &hellip;</p>
+<p>Extremely useful to protect some kinds of retail software &hellip;</p>
+<ul>
+<li>the software maybe difficult to protect</li>
+<li>Logos are not.</li>
+</ul>
+<p>Trademarks can be either registered or not</p>
+<ul>
+<li>UK via the Patent Office</li>
+<li>Many countries require registration before legal protection</li>
+<li>The US and Canada do not &hellip;</li>
+<li>Rules for what can be a trademark (i.e. not people&rsquo;s names or places)</li>
+</ul>
+<p>UK 1994 Act makes it illegal to:</p>
+<ul>
+<li>Apply unauthorised trademark to goods</li>
+<li>Sell or hire goods with such a trademark</li>
+<li>Have in the course of business such goods</li>
+<li>This is usually a criminal office but civil actions can also be brought</li>
+</ul>
+<p>UK law also protects unregistered trademarks</p>
+<ul>
+<li>Tort of Passing off</li>
+<li>Civil action (but far less strong than registered trademarks)</li>
 </ul>
 
 <hr/> <!----------------------------------------------------------------------------------->
