SoftEng: Finished section 4

--- a/databases.html
+++ b/databases.html
@@ -107,7 +107,7 @@ Table of Contents
 
 <hr/> <!------------------------------------------------------------------------------->
 
-<h2 id="basics"> Basics </h2>
+<h2 id="basics"> 3 &dash; Basics </h2>
 <p> Relational databases uses the set theory to connect data around. </p>
 <h3 id="basics1"> Sets </h3>
 <p><strong>Sets</strong> are collections of items. They are unordered and do not contain duplicates. They are written as: <code>{2,4,6,8}</code>.</p>
