--- a/progress.html
+++ b/progress.html
@@ -52,12 +52,12 @@
 <h2> Progress </h2>
 <!-- Change value and max after finishing the table of contents for each module -->
 Software Engineering <br>
-<progress value="3" max="18"></progress> 3/18<br><br>
+<progress value="4" max="18"></progress> 4/18<br><br>
 
 Computational Vision <br>
 <progress value="2" max="13"></progress> 2/13<br><br>
 
-Models of Computation (<a href="#" onclick="document.getElementById('modelstopics').style.display =''">Topic list</a>) <br>
+Models of Computation (<a href="#" onclick="if(document.getElementById('modelstopics').style.display==='none') {document.getElementById('modelstopics').style.display=''; this.innerHTML='Hide';} else {document.getElementById('modelstopics').style.display='none'; this.innerHTML='Topic list'}">Topic list</a>) <br>
 <progress value="7" max="31"></progress> 7/31<br><br>
 <div> <img id="modelstopics" style="display: none;" src="images/models/topiclist.JPG"/> </div>
 
